db setup and user register also done
