# src/models/interfaces/user.ts
@@ -1,0 +1,23 @@
+// export interface User {
+//     userId: string;
+//     firstName: string;
+//     lastName: string;
+//     fullName: string;
+//     email: string;
+//     password: string;
+//     phoneNumber: string;
+//     address: string;
+//     isActive: boolean;
+//     createdDate: Date;
+//     updateDate: Date;
+// };
+
+export interface CreateUser {
+    firstName: string;
+    lastName: string;
+    fullName: string;
+    email: string;
+    password: string;
+    phoneNumber: string;
+    address: string;
+}
